--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,11 @@
 spring:
   h2:
-    console:
-      enabled: true
-      path: /h2-console
+    console.enabled: true
+    #http://localhost:8080/h2-console
   datasource:
-    url: jdbc:h2:~/test
-#    localhost:8080/h2-console
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
